# lib/db/api.js
@@ -1699,4 +1699,49 @@ dbapi.deleteVirtualDevice = function(id) {
   return db.run(r.table('virtual_devices').get(id).delete())
 }
 
+dbapi.getAiTasks = function() {
+  return db.run(r.table('ai_tasks'))
+    .then(function(cursor) {
+      return cursor.toArray()
+    })
+}
+
+dbapi.getAiTasksBySerial = function(serial) {
+  return db.run(r.table('ai_tasks').getAll(serial, {index: 'serial'}))
+    .then(function(cursor) {
+      return cursor.toArray()
+    })
+}
+
+dbapi.getAiTask = function(id) {
+  return db.run(r.table('ai_tasks').get(id))
+}
+
+dbapi.createAiTask = function(data) {
+  const id = util.format('%s', uuid.v4()).replace(/-/g, '')
+  const now = r.now()
+
+  return db.run(r.table('ai_tasks').insert(Object.assign({}, data, {
+    id: id
+  , createdAt: now
+  , updatedAt: now
+  })))
+    .then(function() {
+      return dbapi.getAiTask(id)
+    })
+}
+
+dbapi.updateAiTask = function(id, data) {
+  return db.run(r.table('ai_tasks').get(id).update(
+    Object.assign({}, data, {updatedAt: r.now()})
+  ))
+  .then(function() {
+    return dbapi.getAiTask(id)
+  })
+}
+
+dbapi.deleteAiTask = function(id) {
+  return db.run(r.table('ai_tasks').get(id).delete())
+}
+
 module.exports = dbapi
